Fix load history on firefox and rate form

--- a/src/assets/styles/common/chatSetting.scss
+++ b/src/assets/styles/common/chatSetting.scss
@@ -47,7 +47,6 @@
 }
 
 .chat-setting {
-  border-left: 1px solid $gray-lighter;
   border-right: 1px solid $gray-lighter;
   float: right;
   font-size: 1.05em;
