--- a/src/assets/styles/common/chatWindow.scss
+++ b/src/assets/styles/common/chatWindow.scss
@@ -108,8 +108,10 @@
   }
 
   .chat-body {
+    border-left: 1px solid $gray-lighter;
+    border-right: 1px solid $gray-lighter;
     float: left;
-    height: calc(100vh - 55px);
+    height: calc(100vh - 50px);
     position: relative;
     width: calc(100% - 320px);
 
@@ -173,13 +175,111 @@
   }
 }
 
-@-moz-document url-prefix() {
-  .chat-window .title {
-    font-size: .9em;
-    padding: 12px;
+#rate-box {
+  color: $gray-darker;
+  font-size: 1.2em;
+  padding: 15px 0 0;
+  text-align: center;
 
-    .fa {
-      font-size: 1.1em;
+  .rate-form {
+    height: 100%;
+
+    .time-stamp {
+      border-bottom: 1px dotted $blue-lighter;
+      margin-bottom: 10px;
+      padding-bottom: 15px;
+    }
+
+    .cost-money {
+      margin-bottom: 5px;
+
+      .title {
+        margin-bottom: 0;
+      }
+
+      .value {
+        color: $blue;
+        font-size: 1.9em; 
+        font-weight: bold;
+      }
+    }
+
+    .tips {
+      margin: 0 auto 20px auto;
+      width: 90%;
+    }
+
+    footer {
+      background-color: $blue;
+      color: $white;
+      margin-top: 15px;
+      padding: 15px;
+
+      .thanks {
+        font-size: 1.6em;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      img {
+        border-radius: 50%;
+        border: 5px solid $white;
+        height: 110px;
+        margin-bottom: 10px;
+        width: 110px;
+      }
+
+      .rate {
+        .title {
+          margin-bottom: 10px;
+        }
+      }
+
+      button {
+        background-color: $orange;
+        border: 0;
+        border-radius: 5px;
+        color: $white;
+        cursor: pointer;
+        font-weight: bold;
+        margin-bottom: 9px;
+        margin-top: 10px;
+        padding: 14px 20px;
+
+        &:hover {
+          background-color: $white;
+          color: $orange;
+          transition: all .5s ease;
+        }
+
+        &:focus {
+          outline: 0;
+        }
+      }
+    }
+  }
+
+  .stars {
+    div {
+      display: inline-block;
+    }  
+  }
+}
+
+@-moz-document url-prefix() {
+  .chat-window {
+    .chat-body {
+      height: calc(100vh - 47px);
+    }
+
+    .title {
+      font-size: .9em;
+      height: 47px;
+      padding: 12px;
+  
+      .fa {
+        font-size: 1.1em;
+      }
     }
   }
 }
