--- a/src/assets/styles/common/userIndex.css
+++ b/src/assets/styles/common/userIndex.css
@@ -1,5 +1,4 @@
 .list-users {
-  border-right: 1px solid #e5ecf0;
   float: left;
   height: 100%;
   width: 320px; }
